First commit for speciality group refactor
